# protocols

./: .gitignore  README.md  compare_results_and_norms.py  comparison_results_and_norms.py  constants.py  convert_files_in_dir.py  fbu_comparison_results_and_norms.py  fbu_get_data_from_word_file.py  get_data_from_word_file.py  main_file.py  models.py  pyproject.toml  return_in_excel.py  structure_of_project.txt  work_with_db.py  work_with_tables_in_db.py
cli/: cli_db_manager.py  main_cli.py  utils.py
comparator/: comparator.py
compress_pdfs/: compress_file.py  compress_file_aspose_pdf.py
conversion/: convert_files_all.py  convert_files_in_dir.py  convert_files_in_dir_by_one.py  exceptions.py  files_and_proc_utils.py  files_and_proc_works.py  remove_back_elements.py  remove_pages_in_pdf.py  rename_files.py  screen_work.py
database/: base.py  db_config.py  db_config_postgres.py  db_manager.py
fbu_protocols/: file_parser.py
league_sert/: README.md  constants.py  db_writer.py  exceptions.py  models.py  models_creator.py  models_manager.py  sql_query.py  to_xlsx.py  write_to_xlsx.py
league_sert/data_preparation/: README.md  add_conclusions.py  common.py  comparator.py  exceptions.py  extract_numb_and_date.py  file_parser.py  fix_the_values.py  launch_data_preparation.py  merge_tables.py  process_tables.py  value_processor.py
league_sert/data_processor/: add_conclusion.py  comparator.py  file_data_collector.py
league_sert/db_operations/: db_writer.py  file_utils.py
league_sert/manual_entry/: db_writer_debug.py  exceptions.py  file_parser_manual.py  manual_handlers_exceptions.py  models_creator_debug.py
league_sert/models/: exceptions.py  models.py  models_creator.py
quarantine_acts/: models.py  parse_file.py  write_to_db_quarantine_act.py
rename_files/: rename_files.py
shitest/: conftest.py  test_compare_results_and_norms.py  test_fbu_comparison_results_and_norms.py  test_get_data_from_word_file.py  test_work_with_tables_in_db.py
shitest/test_league_sert/: conftest.py  data_for_main_collector.py
tests/: conftest.py  test_compare_results_and_norms.py  test_fbu_comparison_results_and_norms.py  test_get_data_from_word_file.py  test_work_with_db.py  test_work_with_tables_in_db.py
tests/conversion/: test_rename_files.py
tests/test_league_sert/: conftest.py  test_db_writer.py  test_fix_the_keys_in_table.py
tests/word_files/: file_1.docx  file_2.docx  (+1 more)
(+47 files in other folders)
