[tool.poetry]
name = "protocols"
version = "0.1.0"
description = ""
authors = ["ruslan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
pytesseract = "^0.3.10"
opencv-python = "^4.9.0.80"
pdf2image = "^1.17.0"
pdfminer-six = "^20231228"
pdfplumber = "^0.11.0"
pillow = "^10.2.0"
pypdf2 = "^3.0.1"
pyautogui = "^0.9.54"
psutil = "^5.9.8"
py-win-keyboard-layout = "^0.2"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
