[tool.poetry]
name = "protocols"
version = "0.1.0"
description = ""
authors = ["ruslan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
pytesseract = "^0.3.10"
opencv-python = "^4.9.0.80"
pdf2image = "^1.17.0"
pdfminer-six = "^20231228"
pdfplumber = "^0.11.0"
pillow = "^10.2.0"
pypdf2 = "^3.0.1"
pyautogui = "^0.9.54"
psutil = "^5.9.8"
py-win-keyboard-layout = "^0.2"
pylint = "^3.1.0"
python-docx = "^1.1.0"
docx2txt = "^0.8"
sqlalchemy = "^2.0.29"
openpyxl = "^3.1.2"
pynput = "^1.7.6"
pytest = "^8.2.2"
pymupdf = "^1.24.7"
reportlab = "^4.2.2"
docx2pdf = "^0.1.8"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
